lexing_parsing/src/cool.y.output
Terminals unused in grammar

    ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS error ';'

    7 feature_list: ε
    8             | feature_list feature

    9 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   10        | OBJECTID ':' TYPEID optional_definition ';'
   11        | error ';'

   12 optional_definition: ε
   13                    | ASSIGN expr

   14 formal_list: ε
   15            | formal_list ',' formal
   16            | formal

   17 formal: OBJECTID ':' TYPEID

   18 expr: OBJECTID ASSIGN expr
   19     | expr '.' OBJECTID '(' arguments ')'
   20     | expr '@' TYPEID '.' OBJECTID '(' arguments ')'
   21     | OBJECTID '(' arguments ')'
   22     | IF expr THEN expr ELSE expr FI
   23     | WHILE expr LOOP expr POOL
   24     | '{' block_expr_list '}'
   25     | LET assignment_list
   26     | CASE expr OF case_list ESAC
   27     | NEW TYPEID
   28     | ISVOID expr
   29     | expr '+' expr
   30     | expr '-' expr
   31     | expr '*' expr
   32     | expr '/' expr
   33     | '~' expr
   34     | expr '<' expr
   35     | expr LE expr
   36     | expr '=' expr
   37     | NOT expr
   38     | '(' expr ')'
   39     | OBJECTID
   40     | INT_CONST
   41     | STR_CONST
   42     | BOOL_CONST
   43     | FOR '(' for_loop_definition

   44 for_loop_definition: OBJECTID ':' TYPEID optional_definition ';' expr ';' expr ')' '{' expr '}'
   45                    | OBJECTID ':' TYPEID optional_definition ',' for_loop_definition

   46 arguments: ε
   47          | expr
   48          | arguments ',' expr

   49 block_expr_list: expr ';'
   50                | block_expr_list expr ';'
   51                | error ';'
   52                | error

   53 assignment_list: OBJECTID ':' TYPEID optional_definition IN expr
   54                | OBJECTID ':' TYPEID optional_definition ',' assignment_list
   55                | error assignment_list
   56                | error IN expr

   57 case_list: case
   58          | case_list case

   59 case: OBJECTID ':' TYPEID DARROW expr ';'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 9 19 20 21 38 43
    ')' (41) 9 19 20 21 38 44
    '*' (42) 31
    '+' (43) 29
    ',' (44) 15 45 48 54
    '-' (45) 30
    '.' (46) 19 20
    '/' (47) 32
    ':' (58) 9 10 17 44 45 53 54 59
    ';' (59) 4 5 6 9 10 11 44 49 50 51 59
    '<' (60) 34
    '=' (61) 36
    '@' (64) 20
    '{' (123) 4 5 9 24 44
    '}' (125) 4 5 9 24 44
    '~' (126) 33
    error (256) 6 11 51 52 55 56
    CLASS (258) 4 5 6
    ELSE (259) 22
    FI (260) 22
    IF (261) 22
    IN (262) 53 56
    INHERITS (263) 5
    LET (264) 25
    LOOP (265) 23
    POOL (266) 23
    THEN (267) 22
    WHILE (268) 23
    CASE (269) 26
    ESAC (270) 26
    OF (271) 26
    DARROW (272) 59
    NEW (273) 27
    ISVOID (274) 28
    STR_CONST <symbol> (275) 41
    INT_CONST <symbol> (276) 40
    BOOL_CONST <boolean> (277) 42
    TYPEID <symbol> (278) 4 5 9 10 17 20 27 44 45 53 54 59
    OBJECTID <symbol> (279) 9 10 17 18 19 20 21 39 44 45 53 54 59
    ASSIGN (280) 13 18
    NOT (281) 37
    LE (282) 35
    FOR (283) 43
    ERROR (284)


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    program <program> (47)
        on left: 1
        on right: 0
    class_list <classes> (48)
        on left: 2 3
        on right: 1 3
    class <class_> (49)
        on left: 4 5 6
        on right: 2 3
    feature_list <features> (50)
        on left: 7 8
        on right: 4 5 8
    feature <feature> (51)
        on left: 9 10 11
        on right: 8
    optional_definition <expression> (52)
        on left: 12 13
        on right: 10 44 45 53 54
    formal_list <formals> (53)
        on left: 14 15 16
        on right: 9 15
    formal <formal> (54)
        on left: 17
        on right: 15 16
    expr <expression> (55)
        on left: 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
        on right: 9 13 18 19 20 22 23 26 28 29 30 31 32 33 34 35 36 37 38 44 47 48 49 50 53 56 59
    for_loop_definition <expression> (56)
        on left: 44 45
        on right: 43 45
    arguments <expressions> (57)
        on left: 46 47 48
        on right: 19 20 21 48
    block_expr_list <expressions> (58)
        on left: 49 50 51 52
        on right: 24 50
    assignment_list <expression> (59)
        on left: 53 54 55 56
        on right: 25 54 55
    case_list <cases> (60)
        on left: 57 58
        on right: 26 58
    case <case_> (61)
        on left: 59
        on right: 57 58


State 0

    0 $accept: • program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS • TYPEID '{' feature_list '}' ';'
    5      | CLASS • TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS • error ';'

    error   shift, and go to state 5
    TYPEID  shift, and go to state 6


State 2

    0 $accept: program • $end

    $end  shift, and go to state 7


State 3

    1 program: class_list •
    3 class_list: class_list • class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 8


State 4

    2 class_list: class •

    $default  reduce using rule 2 (class_list)


State 5

    6 class: CLASS error • ';'

    ';'  shift, and go to state 9


State 6

    4 class: CLASS TYPEID • '{' feature_list '}' ';'
    5      | CLASS TYPEID • INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 7

    0 $accept: program $end •

    $default  accept


State 8

    3 class_list: class_list class •

    $default  reduce using rule 3 (class_list)


State 9

    6 class: CLASS error ';' •

    $default  reduce using rule 6 (class)


State 10

    5 class: CLASS TYPEID INHERITS • TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' • feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 13


State 12

    5 class: CLASS TYPEID INHERITS TYPEID • '{' feature_list '}' ';'

    '{'  shift, and go to state 14


State 13

    4 class: CLASS TYPEID '{' feature_list • '}' ';'
    8 feature_list: feature_list • feature

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 17

    feature  go to state 18


State 14

    5 class: CLASS TYPEID INHERITS TYPEID '{' • feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 19


State 15

   11 feature: error • ';'

    ';'  shift, and go to state 20


State 16

    9 feature: OBJECTID • '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   10        | OBJECTID • ':' TYPEID optional_definition ';'

    '('  shift, and go to state 21
    ':'  shift, and go to state 22


State 17

    4 class: CLASS TYPEID '{' feature_list '}' • ';'

    ';'  shift, and go to state 23


State 18

    8 feature_list: feature_list feature •

    $default  reduce using rule 8 (feature_list)


State 19

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list • '}' ';'
    8 feature_list: feature_list • feature

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 24

    feature  go to state 18


State 20

   11 feature: error ';' •

    $default  reduce using rule 11 (feature)


State 21

    9 feature: OBJECTID '(' • formal_list ')' ':' TYPEID '{' expr '}' ';'

    OBJECTID  shift, and go to state 25

    $default  reduce using rule 14 (formal_list)

    formal_list  go to state 26
    formal       go to state 27


State 22

   10 feature: OBJECTID ':' • TYPEID optional_definition ';'

    TYPEID  shift, and go to state 28


State 23

    4 class: CLASS TYPEID '{' feature_list '}' ';' •

    $default  reduce using rule 4 (class)


State 24

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' • ';'

    ';'  shift, and go to state 29


State 25

   17 formal: OBJECTID • ':' TYPEID

    ':'  shift, and go to state 30


State 26

    9 feature: OBJECTID '(' formal_list • ')' ':' TYPEID '{' expr '}' ';'
   15 formal_list: formal_list • ',' formal

    ')'  shift, and go to state 31
    ','  shift, and go to state 32


State 27

   16 formal_list: formal •

    $default  reduce using rule 16 (formal_list)


State 28

   10 feature: OBJECTID ':' TYPEID • optional_definition ';'

    ASSIGN  shift, and go to state 33

    $default  reduce using rule 12 (optional_definition)

    optional_definition  go to state 34


State 29

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' •

    $default  reduce using rule 5 (class)


State 30

   17 formal: OBJECTID ':' • TYPEID

    TYPEID  shift, and go to state 35


State 31

    9 feature: OBJECTID '(' formal_list ')' • ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 36


State 32

   15 formal_list: formal_list ',' • formal

    OBJECTID  shift, and go to state 25

    formal  go to state 37


State 33

   13 optional_definition: ASSIGN • expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    FOR         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 53


State 34

   10 feature: OBJECTID ':' TYPEID optional_definition • ';'

    ';'  shift, and go to state 54


State 35

   17 formal: OBJECTID ':' TYPEID •

    $default  reduce using rule 17 (formal)


State 36

    9 feature: OBJECTID '(' formal_list ')' ':' • TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 55


State 37

   15 formal_list: formal_list ',' formal •

    $default  reduce using rule 15 (formal_list)


State 38

   22 expr: IF • expr THEN expr ELSE expr FI

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    FOR         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 56


State 39

   25 expr: LET • assignment_list

    error     shift, and go to state 57
    OBJECTID  shift, and go to state 58

    assignment_list  go to state 59


State 40

   23 expr: WHILE • expr LOOP expr POOL

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    FOR         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 60


State 41

   26 expr: CASE • expr OF case_list ESAC

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    FOR         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 61


State 42

   27 expr: NEW • TYPEID

    TYPEID  shift, and go to state 62


State 43

   28 expr: ISVOID • expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    FOR         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 63


State 44

   41 expr: STR_CONST •

    $default  reduce using rule 41 (expr)


State 45

   40 expr: INT_CONST •

    $default  reduce using rule 40 (expr)


State 46

   42 expr: BOOL_CONST •

    $default  reduce using rule 42 (expr)


State 47

   18 expr: OBJECTID • ASSIGN expr
   21     | OBJECTID • '(' arguments ')'
   39     | OBJECTID •

    ASSIGN  shift, and go to state 64
    '('     shift, and go to state 65

    $default  reduce using rule 39 (expr)


State 48

   37 expr: NOT • expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    FOR         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 66


State 49

   43 expr: FOR • '(' for_loop_definition

    '('  shift, and go to state 67


State 50

   33 expr: '~' • expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    FOR         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 68


State 51

   24 expr: '{' • block_expr_list '}'

    error       shift, and go to state 69
    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    FOR         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr             go to state 70
    block_expr_list  go to state 71


State 52

   38 expr: '(' • expr ')'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    FOR         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 72


State 53

   13 optional_definition: ASSIGN expr •
   19 expr: expr • '.' OBJECTID '(' arguments ')'
   20     | expr • '@' TYPEID '.' OBJECTID '(' arguments ')'
   29     | expr • '+' expr
   30     | expr • '-' expr
   31     | expr • '*' expr
   32     | expr • '/' expr
   34     | expr • '<' expr
   35     | expr • LE expr
   36     | expr • '=' expr

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 13 (optional_definition)


State 54

   10 feature: OBJECTID ':' TYPEID optional_definition ';' •

    $default  reduce using rule 10 (feature)


State 55

    9 feature: OBJECTID '(' formal_list ')' ':' TYPEID • '{' expr '}' ';'

    '{'  shift, and go to state 82


State 56

   19 expr: expr • '.' OBJECTID '(' arguments ')'
   20     | expr • '@' TYPEID '.' OBJECTID '(' arguments ')'
   22     | IF expr • THEN expr ELSE expr FI
   29     | expr • '+' expr
   30     | expr • '-' expr
   31     | expr • '*' expr
   32     | expr • '/' expr
   34     | expr • '<' expr
   35     | expr • LE expr
   36     | expr • '=' expr

    THEN  shift, and go to state 83
    LE    shift, and go to state 73
    '<'   shift, and go to state 74
    '='   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '@'   shift, and go to state 80
    '.'   shift, and go to state 81


State 57

   55 assignment_list: error • assignment_list
   56                | error • IN expr

    error     shift, and go to state 57
    IN        shift, and go to state 84
    OBJECTID  shift, and go to state 58

    assignment_list  go to state 85


State 58

   53 assignment_list: OBJECTID • ':' TYPEID optional_definition IN expr
   54                | OBJECTID • ':' TYPEID optional_definition ',' assignment_list

    ':'  shift, and go to state 86


State 59

   25 expr: LET assignment_list •

    $default  reduce using rule 25 (expr)


State 60

   19 expr: expr • '.' OBJECTID '(' arguments ')'
   20     | expr • '@' TYPEID '.' OBJECTID '(' arguments ')'
   23     | WHILE expr • LOOP expr POOL
   29     | expr • '+' expr
   30     | expr • '-' expr
   31     | expr • '*' expr
   32     | expr • '/' expr
   34     | expr • '<' expr
   35     | expr • LE expr
   36     | expr • '=' expr

    LOOP  shift, and go to state 87
    LE    shift, and go to state 73
    '<'   shift, and go to state 74
    '='   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '@'   shift, and go to state 80
    '.'   shift, and go to state 81


State 61

   19 expr: expr • '.' OBJECTID '(' arguments ')'
   20     | expr • '@' TYPEID '.' OBJECTID '(' arguments ')'
   26     | CASE expr • OF case_list ESAC
   29     | expr • '+' expr
   30     | expr • '-' expr
   31     | expr • '*' expr
   32     | expr • '/' expr
   34     | expr • '<' expr
   35     | expr • LE expr
   36     | expr • '=' expr

    OF   shift, and go to state 88
    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81


State 62

   27 expr: NEW TYPEID •

    $default  reduce using rule 27 (expr)


State 63

   19 expr: expr • '.' OBJECTID '(' arguments ')'
   20     | expr • '@' TYPEID '.' OBJECTID '(' arguments ')'
   28     | ISVOID expr •
   29     | expr • '+' expr
   30     | expr • '-' expr
   31     | expr • '*' expr
   32     | expr • '/' expr
   34     | expr • '<' expr
   35     | expr • LE expr
   36     | expr • '=' expr

    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 28 (expr)


State 64

   18 expr: OBJECTID ASSIGN • expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    FOR         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 89


State 65

   21 expr: OBJECTID '(' • arguments ')'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    FOR         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    $default  reduce using rule 46 (arguments)

    expr       go to state 90
    arguments  go to state 91


State 66

   19 expr: expr • '.' OBJECTID '(' arguments ')'
   20     | expr • '@' TYPEID '.' OBJECTID '(' arguments ')'
   29     | expr • '+' expr
   30     | expr • '-' expr
   31     | expr • '*' expr
   32     | expr • '/' expr
   34     | expr • '<' expr
   35     | expr • LE expr
   36     | expr • '=' expr
   37     | NOT expr •

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 37 (expr)


State 67

   43 expr: FOR '(' • for_loop_definition

    OBJECTID  shift, and go to state 92

    for_loop_definition  go to state 93


State 68

   19 expr: expr • '.' OBJECTID '(' arguments ')'
   20     | expr • '@' TYPEID '.' OBJECTID '(' arguments ')'
   29     | expr • '+' expr
   30     | expr • '-' expr
   31     | expr • '*' expr
   32     | expr • '/' expr
   33     | '~' expr •
   34     | expr • '<' expr
   35     | expr • LE expr
   36     | expr • '=' expr

    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 33 (expr)


State 69

   51 block_expr_list: error • ';'
   52                | error •

    ';'  shift, and go to state 94

    $default  reduce using rule 52 (block_expr_list)


State 70

   19 expr: expr • '.' OBJECTID '(' arguments ')'
   20     | expr • '@' TYPEID '.' OBJECTID '(' arguments ')'
   29     | expr • '+' expr
   30     | expr • '-' expr
   31     | expr • '*' expr
   32     | expr • '/' expr
   34     | expr • '<' expr
   35     | expr • LE expr
   36     | expr • '=' expr
   49 block_expr_list: expr • ';'

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81
    ';'  shift, and go to state 95


State 71

   24 expr: '{' block_expr_list • '}'
   50 block_expr_list: block_expr_list • expr ';'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    FOR         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '}'         shift, and go to state 96
    '('         shift, and go to state 52

    expr  go to state 97

